--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,3 +12,15 @@ add_subdirectory(pcclub)
 add_executable(${PROJECT_NAME} ${SOURCES})
 
 target_link_libraries(${PROJECT_NAME} pcclub)
+
+enable_testing()
+add_subdirectory(tests)
+
+include(FetchContent)
+FetchContent_Declare(
+  googletest
+  GIT_REPOSITORY https://github.com/google/googletest.git
+  GIT_TAG release-1.12.1
+)
+
+FetchContent_MakeAvailable(googletest)
